5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1582_996.log
== TEST (2019-03-21 16:26:02) 
-- CODE:
print(" ***** ")
print("(*o o*)")
print(" * ^ * ")
print(" *___*")
print(" ***** ")
-- OUTPUT:
***** 
(*o o*)
 * ^ * 
 *___*
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:43:24) 
-- CODE:
print(" ***** ")
print("(*o o*)")
print(" * ^ * ")
print(" *___*")
print(" ***** ")
-- EXECUTION TIME:
0.233468
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(*o o*)
 * ^ * 
 *___*
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:45:00) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ *")
print("*___*")
print("*****")
-- EXECUTION TIME:
0.147656
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
* ^ *
*___*
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:45:26) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ *")
print("*---*")
print("*****")
-- EXECUTION TIME:
0.160147
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
* ^ *
*---*
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:47:07) 
-- CODE:
print("*****")
print("(* o o *)")
print(" * ^ *")
print(" * --- *")
print(" ***** ")
-- OUTPUT:
*****
(* o o *)
 * ^ *
 * --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:50:03) 
-- CODE:
print("***** ")
print("*" "o" "o" "*)")
print(" * ^ *")
print(" * --- *")
print(" ***** ")
-- OUTPUT:
***** 
*oo*)
 * ^ *
 * --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:50:34) 
-- CODE:
print("***** ")
print("*" "o" "o" "*")")
print(" * ^ *")
print(" * --- *")
print(" ***** ")
-- ERROR:
File "XXXX", line 2
    print("*" "o" "o" "*")")
                           ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:50:57) 
-- CODE:
print("***** ")
print(("*" "o" "o" "*")")
print(" * ^ *")
print(" * --- *")
print(" ***** ")
-- ERROR:
File "XXXX", line 2
    print(("*" "o" "o" "*")")
                            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 09:53:20) 
-- CODE:
print(" ***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" ***** ")
-- EXECUTION TIME:
0.180764
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o *
*  ^  *
* --- *
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 09:53:29) 
-- CODE:
print(" ***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print(" ***** ")
-- OUTPUT:
***** 
* o o *
*  ^  *
* --- *
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 09:54:07) 
-- CODE:
print("  ***** ")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  ***** ")
-- OUTPUT:
***** 
(* o o *)
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 09:54:28) 
-- CODE:
print("  ***** ")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  ***** ")
-- EXECUTION TIME:
0.267629
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
(* o o *)
 *  ^  *
 * --- *
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 06:40:52) 
-- CODE:
print("  ***** ")
print("(* o o *)")
print(" *  ^  *")
print(" * --- *")
print("  ***** ")
-- OUTPUT:
***** 
(* o o *)
 *  ^  *
 * --- *
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
